# kv_deadline_scheduler

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
abi/: Makefile  README.md  VERSIONING.md  memory_intent.h  memory_intent_ring.c  memory_intent_wire.h  test_abi.c
benchmarks/: README.md  run_reproducible_suite.py
benchmarks/configs/: default_suite.json
disaggregated/: README.md  __init__.py  disaggregated_simulator.py  remote_intent.py  topology.py
disaggregated/results/: README.md  deadline_pressure_remote_vs_deadline.json
docs/: architecture.md  blog_draft.md  index.html  issues_roadmap.md  kernel_io_scheduler_track.md  memory_intent_abi.md  optional_runtime_instrumentation.md  project_arc.md  related_work.md  release_notes_v0_2.md  release_notes_v0_3.md  release_notes_v0_4.md  release_notes_v0_5.md  release_notes_v0_6.md  reproducibility.md  results_template.md  roadmap.md  serving_trace_import_plan.md  vllm_integration_plan.md  vllm_passive_tracing.md  wsl_development.md  wsl_validation_2026_06_17.md
docs/results/: README.md
docs/website/: _config.yml  index.html
examples/: benchmark_sweep.py  mock_vllm_trace_demo.py  plot_sweep_results.py  policy_comparison_demo.py  speculative_sweep.py  synthetic_trace_demo.py
examples/results/: speculative_sweep.json  sweep_summary.csv  sweep_summary.json
experiments/io_uring_kv/: README.md  kv_io_uring_prefetch.py  kv_io_uring_vs_sync.py
experiments/linux_io_priority/: README.md  kv_io_priority_bench.py  results_example.md
experiments/perf_kv/: README.md  kv_perf_counters.c
integrations/: __init__.py
integrations/external_trace/: README.md  parsers.py  request_trace_format.md  telemetry_format.md
integrations/vllm/: README.md  __init__.py  architecture.md  smoke_test_plugin.py  vllm_kv_intent_plugin.py
kernel_patches/: README.md
kernel_patches/kv_damon_scheme/: Makefile  README.md  kv_damon_scheme.c  kv_damon_scheme.h
kernel_patches/kv_intent_shrinker/: Makefile  README.md  kv_intent_shrinker.c
kernel_patches/mm_intent_rfc/: README.md  design_notes.md  validation_plan.md
kernel_patches/mm_kv_intent/: 0001-mm-add-kv_intent_advisor-infrastructure.patch  0002-mm-vmscan-consult-kv_intent_advisor-in-shrink_page_list.patch  0003-mm-kv_intent-add-procfs-userspace-registration-interface.patch  README.md
kernel_vm/: README.md  run_all_experiments.sh
kernel_vm/docs/: damon_intent_bridge.md  madvise_kv_experiment.md  mglru_reclaim_track.md  vm_vs_io_kernel_tracks.md  zswap_swap_track.md
paper/: README.md  kv_deadline_scheduler.md  kv_deadline_scheduler.tex
paper/figures/: figure1_kv_lifecycle.txt  figure2_policy_chart.txt  (+3 more)
qemu_validation/: README.md  minimal.config  setup.sh  test_intent_interface.sh
speculative/: README.md
tests/: test_adapter.py  test_benchmarks.py  test_events.py  test_integration_parsers.py  test_kv_estimator.py  test_openai_adapter.py  test_policies.py  test_prometheus_adapter.py  test_request_trace.py  test_schema.py  test_simulator.py  test_speculative.py  test_trace_importer.py  test_version.py  test_vllm_adapter.py  test_vllm_plugin.py
(+60 files in other folders)
