[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-deadline-scheduler"
version = "0.3.0"
description = "Deadline-aware KV-cache scheduling for protecting decode-critical request-state under long-context LLM inference pressure."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Manish KL"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
kvmi = "kv_memory_intent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kv_memory_intent = ["py.typed"]
