[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-deadline-scheduler"
version = "0.6.0"
description = "Deadline-aware KV-cache scheduling for protecting decode-critical request-state under long-context LLM inference pressure."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Manish Klach" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "matplotlib>=3.8"]

[project.urls]
Source = "https://github.com/manishklach/kv_deadline_scheduler"

[project.scripts]
kvmi = "kv_memory_intent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kv_memory_intent = ["py.typed"]
