[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-deadline-scheduler"
version = "0.6.0"
description = "Deadline-aware KV-cache scheduling for protecting decode-critical request-state under long-context LLM inference pressure."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Manish Klach" }]
dependencies = []

[project.optional-dependencies]
plotting = ["matplotlib>=3.8"]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8",
    "ruff>=0.5",
    "matplotlib>=3.8",
]

[project.urls]
Source = "https://github.com/manishklach/kv_deadline_scheduler"

[project.scripts]
kvmi = "kv_memory_intent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = [
    "src/kv_memory_intent/metrics.py",
    "src/kv_memory_intent/policies.py",
    "src/kv_memory_intent/simulator.py",
]
follow_imports = "skip"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kv_memory_intent = ["py.typed"]
